--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="card-body">
                 <h5 class="card-title">Projeler</h5>
                 <p class="card-text">Topluluğumuz bünyesinde geliştirilen projeleri inceleyin.</p>
-                <a href="#" class="btn btn-primary">Projelere Gözat</a>
+                <p class="card-text"><small class="text-muted">Hazırlık aşamasında...</small></p>
               </div>
             </div>
             <div class="card">
@@ -75,8 +75,8 @@
               <div class="card-body">
                 <h5 class="card-title">Etkinlikler</h5>
                 <p class="card-text">SHBİTT bünyesinde yapılan etkinliklere gözatın ve kayıtlarını izleyin.</p>
-                <a href="#" class="btn btn-primary">Etkinlik Ajandası</a>
-                <a href="#" class="btn btn-primary">Geçmiş Kayıtlar</a>
+                <a href="https://1drv.ms/x/s!AqAwuqWz-uF9hAXLPwpgnw6vUwIA?e=MGqzIZ" class="btn btn-primary">Etkinlik Ajandası</a>
+                <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw/videos" class="btn btn-primary">Geçmiş Kayıtlar</a>
               </div>
             </div>
             <div class="card">
@@ -84,7 +84,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Klavuzlar</h5>
                   <p class="card-text">Projelerde kullanılan çeşitli programlama dilleri, kütüphaneler ve araçlarlarla ilgili kendinizi geliştirmek için SHBİTT klavuzları.</p>
-                  <a href="#" class="btn btn-primary">Klavuzlara Gözat</a>
+                  <p class="card-text"><small class="text-muted">Hazırlık aşamasında...</small></p>
                 </div>
               </div>
               <div class="card">
@@ -92,7 +92,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Kominite</h5>
                   <p class="card-text">SHBİTT çatısı altında multisipliner çalışmalara katılmak isteyenlerle tanışın.</p>
-                  <a href="#" class="btn btn-black">Discord Sunucusu</a>
+                  <a href="https://discord.gg/N6caV57dDH" class="btn btn-black">Discord Sunucusu</a>
                 </div>
               </div>
           </div>
