başlık resim türü

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="row">
-      <img src="/images/sade.jpg" class="rounded mx-auto d-block" alt="başlık">
+      <img src="/images/sade.png" class="rounded mx-auto d-block" alt="başlık">
 
     </div>
 
