--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,12 +20,12 @@
     </div>
 
     <div class="row">
-      <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</button>
-      <a href="https://l.instagram.com/?u=https%3A%2F%2F1drv.ms%2Fu%2Fs!AqAwuqWz-uF9atzTG6yrzPUKGyE%3Fe%3DhbSrbp&e=ATPmE-B7RJ-yf4t4avdZVmIldsK6n6YQxfzEm3lZ2v207tYTD9NZjlRY2pldqJV25n6l8_A6_tyk0hiP&s=1" type="button" class="btn btn-primary btn-lg btn-block">Python Klavuzu</button>
-      <a href="https://www.linkedin.com/company/shbitt" type="button" class="btn btn-secondary btn-lg btn-block">LinkedIn</button>
-      <a href="https://twitter.com/ksbu_shbitt" type="button" class="btn btn-secondary btn-lg btn-block">Twitter</button>
-      <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw" type="button" class="btn btn-secondary btn-lg btn-block">Youtube</button>
-      <a href="https://shbitt.github.io/" type="button" class="btn btn-secondary btn-lg btn-block">Ana Sayfa</button>
+      <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</a>
+      <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" type="button" class="btn btn-primary btn-lg btn-block">Python Klavuzu</a>
+      <a href="https://www.linkedin.com/company/shbitt" type="button" class="btn btn-secondary btn-lg btn-block">LinkedIn</a>
+      <a href="https://twitter.com/ksbu_shbitt" type="button" class="btn btn-secondary btn-lg btn-block">Twitter</a>
+      <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw" type="button" class="btn btn-secondary btn-lg btn-block">Youtube</a>
+      <a href="https://shbitt.github.io/" type="button" class="btn btn-secondary btn-lg btn-block">Ana Sayfa</a>
     
       
     </div>
