--- a/linkler/index.html
+++ b/linkler/index.html
@@ -21,7 +21,7 @@
 
     <div class="row">
       <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</a>
-      <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" type="button" class="btn btn-primary btn-lg btn-block">Python Klavuzu</a>
+      <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" type="button" class="btn btn-primary btn-lg btn-block">Python Kılavuzu</a>
       <a href="https://www.linkedin.com/company/shbitt" type="button" class="btn btn-secondary btn-lg btn-block">LinkedIn</a>
       <a href="https://twitter.com/ksbu_shbitt" type="button" class="btn btn-secondary btn-lg btn-block">Twitter</a>
       <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw" type="button" class="btn btn-secondary btn-lg btn-block">Youtube</a>
