--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="nav-link" href="#" >Organizasyon Şeması</a>
       </li>
       <li>
-        <a class="nav-link" href="https://www.uniprot.org/uniprot/P10809" data-toggle="tooltip" title="Yandaki görsel; insan mitokondriyal ısı şok proteininin elektron mikroskopu altındaki 3B yapısının (6mrc numaralı çözüm) QuteMol yazılımıyla yorumlanıp, POVRay yazılımı-raytracing yöntemi kullanmasıyla hazırlanmıştır.">Görsel Hakkında</a>
+        <a class="nav-link" href="https://www.uniprot.org/uniprot/P10809" data-toggle="tooltip" title="Yandaki görsel; insan mitokondriyal ısı şok proteininin elektron mikroskopu altındaki 3B yapısının (6mrc numaralı çözüm) jMol yazılımıyla yorumlanıp, POVRay yazılımı-raytracing yöntemi kullanmasıyla hazırlanmıştır.">Görsel Hakkında</a>
       </li>
       
     </ul>
