--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body>
 <!-- Menü  -->
-<nav class="navbar navbar-expand-lg navbar-light ">
+<nav class="navbar navbar-expand-lg navbar-light" >
     <a class="navbar-brand" href="https://shbitt.github.io" style="margin-right: -155px;">
-      <img class="shbitt_logo" src="/images/sade.png" >
+      <img class="shbitt_logo" src="/images/sade.png" style="margin-left: 9px;">
     </a>
     <ul class="navbar-nav mr-auto">
 
