hakkimizda kısmı eklendi

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>SHBİTT - Ana Sayfa</title>
         <meta charset="utf-8">
         <meta name="keywords" content="SHBİTT, KSBÜ, Hesaplamalı Bilimler, Bilim, Tıp, Biyoloji, Bilgisayar">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@900&display=swap" rel='stylesheet'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item">
-        <a class="nav-link" href="#" >Hakkımızda</a>
+        <a class="nav-link" href="https://shbitt.github.io/hakkimizda" >Hakkımızda</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" >Organizasyon Şeması</a>
@@ -73,7 +73,7 @@
     <div class="row">
 
         <div class="card-deck">
-            <div class="card shadow-lg" >
+            <div class="card shadow-lg" style="width: auto;" >
               <img class="card-img-top" src="images/bulten_cr.jpg" alt="BÜLTEN">
               <div class="card-body">
                 <h5 class="card-title">Bülten</h5>
@@ -81,7 +81,7 @@
                 <p class="card-text"><small class="text-muted">Hazırlık aşamasında...</small></p>
               </div>
             </div>
-            <div class="card shadow-lg">
+            <div class="card shadow-lg" style="width: auto;">
               <img class="card-img-top" src="images/proje_cr.jpeg" alt="PROJELER" >
               <div class="card-body">
                 <h5 class="card-title">Projeler</h5>
@@ -89,16 +89,16 @@
                 <p class="card-text"><small class="text-muted">Hazırlık aşamasında...</small></p>
               </div>
             </div>
-            <div class="card shadow-lg">
+            <div class="card shadow-lg" style="width: auto;">
               <img class="card-img-top" src="images/etkinlik_cr.jpg" alt="ETKİNLİKLER" >
               <div class="card-body">
                 <h5 class="card-title">Etkinlikler</h5>
                 <p class="card-text">SHBİTT bünyesinde yapılan etkinliklere gözatın ve kayıtlarını izleyin.</p>
-                <a href="https://1drv.ms/x/s!AqAwuqWz-uF9hAXLPwpgnw6vUwIA?e=MGqzIZ" class="btn btn-sari" style="margin: 2px;">Etkinlik Ajandası</a>
-                <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw/videos" class="btn btn-sari" style="margin: 2px;">Geçmiş Kayıtlar</a>
+                <a href="https://1drv.ms/x/s!AqAwuqWz-uF9hAXLPwpgnw6vUwIA?e=MGqzIZ" class="btn btn-sari" style="margin: 2px;">Etkinlikler</a>
+                <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw/videos" class="btn btn-sari" style="margin: 2px;">Kaydedilenler</a>
               </div>
             </div>
-            <div class="card shadow-lg">
+            <div class="card shadow-lg" style="width: auto;">
                 <img class="card-img-top" src="images/klavuzlar_cr.jpeg" alt="KILAVUZLAR" >
                 <div class="card-body">
                   <h5 class="card-title">Kılavuzlar</h5>
@@ -106,7 +106,7 @@
                   <p class="card-text"><small class="text-muted">Hazırlık aşamasında...</small></p>
                 </div>
               </div>
-              <div class="card shadow-lg">
+              <div class="card shadow-lg" style="width: auto;">
                 <img class="card-img-top" src="images/kominite_cr.jpg" alt="KOMİNİTE" >
                 <div class="card-body">
                   <h5 class="card-title">Kominite</h5>
