--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="https://shbitt.github.io/hakkimizda" >Hakkımızda</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" >Organizasyon Şeması</a>
+        <a class="nav-link" href="#" data-toggle="tooltip" title="Hazırlık aşamasında" >Organizasyon Şeması</a>
       </li>
       <li>
         <a class="nav-link" href="https://www.uniprot.org/uniprot/P10809" data-toggle="tooltip" title="Yandaki görsel; insan mitokondriyal ısı şok proteininin elektron mikroskopu altındaki 3B yapısının (6mrc numaralı çözüm) jMol yazılımıyla yorumlanıp, POVRay yazılımı-raytracing yöntemi kullanmasıyla hazırlanmıştır.">Görsel Hakkında</a>
