--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <img class="card-img-top" src="images/klavuzlar_cr.jpeg" alt="KILAVUZLAR" >
                 <div class="card-body">
                   <h5 class="card-title">Kılavuzlar</h5>
-                  <p class="card-text">Projelerde kullanılan çeşitli programlama dilleri, kütüphaneler ve araçlarlarla ilgili SHBİTT klavuzları.</p>
+                  <p class="card-text">Pogramlama dilleri, kütüphaneler ve araçlarlarla ilgili SHBİTT kılavuzları.</p>
                   <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" class="btn btn-yesil" style="margin: 2px;">Kılavuzlar</a>
                 </div>
               </div>
