klinik farma etkinkliği eklendi

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,6 +20,7 @@
     </div>
 
     <div class="row">
+      <a href="https://youtu.be/PdgJbetLUm4" type="button" class="btn btn-primary btn-lg btn-block">Yurtdışı Uygulamalarıyla Klinik Farmakoloji (18 Aralık)</a>
       <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</a>
       <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" type="button" class="btn btn-primary btn-lg btn-block">Python Kılavuzu</a>
       <a href="https://www.instagram.com/ksbu_shbitt/" type="button" class="btn btn-secondary btn-lg btn-block">Instagram</a>
