--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span class="sr-only">yanıp sönen şey...</span>
                 </div>
             </div>           
-                <p1>18 Aralık 2020 - Yurtdışı Uygulamalarıyla Klinik Farmakoloji</p1>            
+                <p1>18 Aralık 2020 - Yurtdışı Uygulamalarıyla Klinik Farmakoloji</p1> &ensp; <a href="https://youtu.be/PdgJbetLUm4" target="_blank" >🔗YouTube</a>       
             </div>        
       </div>
 
