14 aralık etlinliği eklendi

--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
                 </div>
             </div>           
                 <p1>18 Aralık 2020 - Yurtdışı Uygulamalarıyla Klinik Farmakoloji</p1> &ensp; <a href="https://youtu.be/PdgJbetLUm4" target="_blank" >🔗YouTube</a>       
-            </div>        
+            </div>   
+            <div class="d-flex flex-row" style="margin: 3px;">          
+              <div class="p-0">
+                  <div class="spinner-grow spinner-grow-sm text-danger" role="status" style="margin-right: 7px;">
+                      <span class="sr-only">yanıp sönen şey...</span>
+                  </div>
+              </div>           
+                  <p1>14 Aralık 2020 - Sağlıkta Yeni Ürün & Servis Tasarımı</p1> &ensp; <a href="https://youtu.be/7pafy-LQHOA" target="_blank" >🔗YouTube</a>       
+              </div>     
       </div>
 
       <div class="col" style="margin: 10px;">
