--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                       <span class="sr-only">yanıp sönen şey...</span>
                   </div>
               </div>           
-                  <p1>14 Aralık 2020 - Sağlıkta Yeni Ürün & Servis Tasarımı</p1> &ensp; <a href="https://youtu.be/7pafy-LQHOA" target="_blank" >🔗YouTube</a> &ensp;&ensp;
+                  <p1>14 Aralık 2020 - Sağlıkta Yeni Ürün & Servis Tasarımı</p1> &ensp; <a href="https://zoom.us/j/95608879116?pwd=T2twQmVIYUlRejdtSUZMSGVDNjd1QT09" target="_blank" >🔗ZOOM</a> &ensp;&ensp;
                   <li><a href="#" data-toggle="modal" data-target="#ozgecmis_modeli">Özgeçmiş</a></li>
                     
                       
