--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,9 +20,9 @@
     </div>
 
     <div class="row">
-      <a href="https://youtu.be/7pafy-LQHOA" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://zoom.us/j/95608879116?pwd=T2twQmVIYUlRejdtSUZMSGVDNjd1QT09" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
-        Sağlıkta Yeni Ürün & Servis Tasarımı (14 Aralık)
+        Sağlıkta Yeni Ürün & Servis Tasarımı ZOOM (14 Aralık)
       </a>
       <a href="https://youtu.be/PdgJbetLUm4" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
