--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                       <span class="sr-only">yanıp sönen şey...</span>
                   </div>
               </div>           
-                  <p1>14 Aralık 2020 - Sağlıkta Yeni Ürün & Servis Tasarımı</p1> &ensp; <a href="https://zoom.us/j/94866730392?pwd=NVZVaDRUeEl6UW9zSFhMd3h1MDltUT09" target="_blank" >🔗ZOOM</a> &ensp;&ensp;
+                  <p1>14 Aralık 2020 - Sağlıkta Yeni Ürün & Servis Tasarımı</p1> &ensp; <a href="https://www.youtube.com/watch?v=SY5CGg2VB3M" target="_blank" >🔗YouTube Kaydı</a> &ensp;&ensp;
                   <li><a href="#" data-toggle="modal" data-target="#ozgecmis_modeli">Özgeçmiş</a></li>
                     
                       
