--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,15 +20,15 @@
     </div>
 
     <div class="row">
-      <a href="https://zoom.us/j/94866730392?pwd=NVZVaDRUeEl6UW9zSFhMd3h1MDltUT09" type="button" class="btn btn-primary btn-lg btn-block">
-        <span class="spinner-grow spinner-grow-sm"></span>
-        Sağlıkta Yeni Ürün & Servis Tasarımı ZOOM (14 Aralık)
-      </a>
-      <a href="https://youtu.be/PdgJbetLUm4" type="button" class="btn btn-primary btn-lg btn-block">
+            <a href="https://youtu.be/PdgJbetLUm4" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         Yurtdışı Uygulamalarıyla Klinik Farmakoloji (18 Aralık)
       </a>
-      <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Kaydı</a>
+      <a href="https://www.youtube.com/watch?v=SY5CGg2VB3M" type="button" class="btn btn-primary btn-lg btn-block">
+        <span class="spinner-grow spinner-grow-sm"></span>
+        Sağlıkta Yeni Ürün & Servis Tasarımı Videosu
+      </a>
+      <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</a>
       <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" type="button" class="btn btn-primary btn-lg btn-block">Python Kılavuzu</a>
       <a href="https://www.instagram.com/ksbu_shbitt/" type="button" class="btn btn-secondary btn-lg btn-block">Instagram</a>
       <a href="https://www.linkedin.com/company/shbitt" type="button" class="btn btn-secondary btn-lg btn-block">LinkedIn</a>
