--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="card-body">
                 <h5 class="card-title">Etkinlikler</h5>
                 <p class="card-text">SHBİTT bünyesinde yapılan etkinliklere gözatın ve kayıtlarını izleyin.</p>
-                <a href="https://1drv.ms/x/s!AqAwuqWz-uF9hAXLPwpgnw6vUwIA?e=MGqzIZ" class="btn btn-sari" style="margin: 2px;">Etkinlikler</a>
+                <a href="https://1drv.ms/x/s!AqAwuqWz-uF9hAXLPwpgnw6vUwIA?e=MGqzIZ" class="btn btn-sari" style="margin: 2px;">Ajanda</a>
                 <a href="https://www.youtube.com/channel/UCX6x07Alcrh3gUNSJ2ItVSw/videos" class="btn btn-sari" style="margin: 2px;">Kaydedilenler</a>
               </div>
             </div>
