--- a/linkler/index.html
+++ b/linkler/index.html
@@ -26,7 +26,7 @@
       </a>
       <a href="https://www.youtube.com/watch?v=SY5CGg2VB3M" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
-        Sağlıkta Yeni Ürün & Servis Tasarımı Videosu
+        Sağlıkta Yeni Ürün & Servis Tasarımı Webinar Videosu
       </a>
       <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</a>
       <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" type="button" class="btn btn-primary btn-lg btn-block">Python Kılavuzu</a>
