link kladırıldı farma için

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="row">
-            <a href="https://youtu.be/PdgJbetLUm4" type="button" class="btn btn-primary btn-lg btn-block">
+            <a href="" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         Yurtdışı Uygulamalarıyla Klinik Farmakoloji (18 Aralık)
       </a>
