--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span class="sr-only">yanıp sönen şey...</span>
                 </div>
             </div>           
-                <p1>18 Aralık 2020 - Yurtdışı Uygulamalarıyla Klinik Farmakoloji</p1> &ensp; <a href="" target="_blank" >🔗---</a>       
+                <p1>18 Aralık 2020 - Yurtdışı Uygulamalarıyla Klinik Farmakoloji</p1> &ensp; <a href="" target="_blank" ></a>       
             </div>   
             <div class="d-flex flex-row" style="margin: 3px;">          
               <div class="p-0">
