Sağlıkta Veri Bilimi ve Yapay Zeka (21 Aralık 2020) eklendi

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -21,10 +21,11 @@
 
     <div class="row">
             
-      <a href="https://www.youtube.com/watch?v=SY5CGg2VB3M" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://www.youtube.com/watch?v=nMsr5s_inAc&feature=youtu.be" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
-        Sağlıkta Yeni Ürün & Servis Tasarımı Webinar Videosu
+        Sağlıkta Veri Bilimi ve Yapay Zeka (21 Aralık 2020 20.00 Canlı)
       </a>
+      <a href="https://www.youtube.com/watch?v=SY5CGg2VB3M" type="button" class="btn btn-primary btn-lg btn-block">Sağlıkta Yeni Ürün & Servis Tasarımı Webinar Videosu</a>
       <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</a>
       <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" type="button" class="btn btn-primary btn-lg btn-block">Python Kılavuzu</a>
       <a href="https://shbitt.github.io/" type="button" class="btn btn-secondary btn-lg btn-block">Ana Sayfa</a>
