--- a/linkler/index.html
+++ b/linkler/index.html
@@ -21,7 +21,7 @@
 
     <div class="row">
             
-      <a href="https://www.youtube.com/watch?v=nMsr5s_inAc&feature=youtu.be" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://youtu.be/1GE3MJU2bdA" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         Sağlıkta Veri Bilimi ve Yapay Zeka (21 Aralık 2020 20.00 Canlı)
       </a>
