--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <span class="sr-only">yanıp sönen şey...</span>
               </div>
           </div>           
-              <p1>21 Aralık 2020 - Sağlıkta Veri Bilimi ve Yapay Zeka</p1> &ensp; <a href="https://www.youtube.com/watch?v=nMsr5s_inAc&feature=youtu.be" target="_blank" >🔗YouTube Canlı</a> &ensp;&ensp;
+              <p1>21 Aralık 2020 - Sağlıkta Veri Bilimi ve Yapay Zeka</p1> &ensp; <a href="https://youtu.be/1GE3MJU2bdA" target="_blank" >🔗YouTube Canlı</a> &ensp;&ensp;
               <li><a href="#" data-toggle="modal" data-target="#ozgecmis_sedatirgil">Sedat İRGİL Özgeçmişi</a></li>&ensp;&ensp;
               <li><a href="#" data-toggle="modal" data-target="#ozgecmis_salihtutun">Salih TUTUN Özgeçmişi</a></li>&ensp;&ensp;
               <li><a href="#" data-toggle="modal" data-target="#ozgecmis_onurdogan">Onur DOĞAN Özgeçmişi</a></li>&ensp;&ensp;                                      
