canlı > kyıda döndürüldü

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -23,7 +23,7 @@
             
       <a href="https://youtu.be/1GE3MJU2bdA" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
-        Sağlıkta Veri Bilimi ve Yapay Zeka (21 Aralık 2020 20.00 Canlı)
+        Sağlıkta Veri Bilimi ve Yapay Zeka Weinar Videosu
       </a>
       <a href="https://www.youtube.com/watch?v=SY5CGg2VB3M" type="button" class="btn btn-primary btn-lg btn-block">Sağlıkta Yeni Ürün & Servis Tasarımı Webinar Videosu</a>
       <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</a>
