28 aralık etkinliği eklendi

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,7 +20,11 @@
     </div>
 
     <div class="row">
-            
+
+      <a href="https://youtu.be/pwnFenUKZrY" type="button" class="btn btn-primary btn-lg btn-block">
+        <span class="spinner-grow spinner-grow-sm"></span>
+        Sayısal Sağlık (28 Aralık 2020 Canlı)
+      </a>            
       <a href="https://youtu.be/1GE3MJU2bdA" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         Sağlıkta Veri Bilimi ve Yapay Zeka Weinar Videosu
