--- a/linkler/index.html
+++ b/linkler/index.html
@@ -23,7 +23,7 @@
 
       <a href="https://youtu.be/pwnFenUKZrY" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
-        Sayısal Sağlık (28 Aralık 2020 Canlı)
+        Sayısal Sağlık Weinar Videosu
       </a>            
       <a href="https://youtu.be/1GE3MJU2bdA" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
