--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <span class="sr-only">yanıp sönen şey...</span>
               </div>
           </div>           
-              <p1>28 Aralık 2020 - Sayısal Sağlık</p1> &ensp; <a href="https://youtu.be/pwnFenUKZrY" target="_blank" >🔗YouTube Canlı</a> &ensp;&ensp;
+              <p1>28 Aralık 2020 - Sayısal Sağlık</p1> &ensp; <a href="https://youtu.be/pwnFenUKZrY" target="_blank" >🔗YouTube Kaydı</a> &ensp;&ensp;
               <li><a href="#" data-toggle="modal" data-target="#ozgecmis_banuonaral">Banu ONARAL Özgeçmişi</a></li>&ensp;&ensp; 
               <li><a href="#" data-toggle="modal" data-target="#ozgecmis_akinaltunbas">Akın ALTUNBAŞ Özgeçmişi</a></li>&ensp;&ensp;
                                                               
