kilavuz linki bağlandı

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ IEEE Engineering in Medicine and Biology Society (EMBS)’da Fellow, American As
                 <div class="card-body">
                   <h5 class="card-title">Kılavuzlar</h5>
                   <p class="card-text">Pogramlama dilleri, kütüphaneler ve araçlarlarla ilgili SHBİTT kılavuzları.</p>
-                  <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" class="btn btn-yesil" style="margin: 2px;">Kılavuzlar</a>
+                  <a href="https://shbitt.github.io/kilavuzlar/python3_egitim_materyalleri_giris.pdf" class="btn btn-yesil" style="margin: 2px;">Kılavuzlar</a>
                 </div>
               </div>
               <div class="card mb-6 shadow-lg" style="width: auto; min-width: 225px; max-width:25rem;" >
