--- a/linkler/index.html
+++ b/linkler/index.html
@@ -31,7 +31,7 @@
       </a>
       <a href="https://www.youtube.com/watch?v=SY5CGg2VB3M" type="button" class="btn btn-primary btn-lg btn-block">Sağlıkta Yeni Ürün & Servis Tasarımı Webinar Videosu</a>
       <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</a>
-      <a href="https://1drv.ms/u/s!AqAwuqWz-uF9atzTG6yrzPUKGyE?e=hbSrbp" type="button" class="btn btn-primary btn-lg btn-block">Python Kılavuzu</a>
+      <a href="https://shbitt.github.io/kilavuzlar/python3_egitim_materyalleri_giris.pdf" type="button" class="btn btn-primary btn-lg btn-block">Python Kılavuzu</a>
       <a href="https://shbitt.github.io/" type="button" class="btn btn-secondary btn-lg btn-block">Ana Sayfa</a>
       <a href="https://www.instagram.com/ksbu_shbitt/" type="button" class="btn btn-secondary btn-lg btn-block">Instagram</a>
       <a href="https://www.linkedin.com/company/shbitt" type="button" class="btn btn-secondary btn-lg btn-block">LinkedIn</a>
