etkinlik eklendi > yz sağlığı dönüştürebilir mi

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,7 +20,10 @@
     </div>
 
     <div class="row">
-
+      <a href="https://youtu.be/rTyHsTD2Kcg" type="button" class="btn btn-primary btn-lg btn-block">
+        <span class="spinner-grow spinner-grow-sm"></span>
+        18 Ocak 2020 - Yapay Zeka Sağlığı Dönüştürebilir mi?
+      </a> 
       <a href="https://forms.gle/AcNbuivsDVb5zaCs7" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         25 Ocak 2021 - NVIDIA DLI: Derin Öğrenmenin Temelleri Kursu
