--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       
       <!-- Modal Yazısı -->
       <div class="modal-body">
-        2014 yılında Boğaziçi Üniversitesi Elektrik-Elektronik Mühendisliğinden mezun olmuştur. 2014-2016 yılları arasında Kaliforniya Üniversitesinde Biyomedikal Mühendisliği alanında yüksek lisans yapmıştır. Şu an Imperial College London BioMedIA Grup’ta Makine Öğrenmesi ve Medikal Görüntüleme üzerine hem araştırma görevlisi olarak çalışmak da hem de doktora eğitimini almaktadır. Fotomanyetik görüntüleme, fiber optik LIoyd aynaları konularında yayınlanmış makaleleri mevcuttur.
+        2014 yılında Boğaziçi Üniversitesi Elektrik-Elektronik Mühendisliğinden mezun olmuştur. 2014-2016 yılları arasında Kaliforniya Üniversitesinde  Biyomedikal Mühendisliği alanında yüksek lisans yapmıştır. Ardından Kaliforniya'da özel bir sirkette yazılım ve biyomedikal mühendisi olarak çalıştıktan sonra Kaliforniya Üniversitesi (Irvine) Radyoloji bölümünde yapay zeka uygulamaları gelistirdi. 2019 yılından bu yana da medikal görüntü işleme üzerine akademik çalışmalarını Imperial College London Bilgisayar Bilimlerinde devam ettirmektedir.
       </div>
       
       <!-- Modal Alt Kısım -->
