etkinlik eklendi > floresans ve robotik

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,14 +20,18 @@
     </div>
 
     <div class="row">
-      <a href="https://youtu.be/rTyHsTD2Kcg" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://www.youtube.com/watch?v=u0d-Vs9Et4o&feature=youtu.be" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
-        18 Ocak 2021 - Yapay Zeka Sağlığı Dönüştürebilir mi?
+        23 Ocak 2021 - Floresans Görüntüleme ve Robotik Cerrahi
       </a> 
+      
       <a href="https://forms.gle/AcNbuivsDVb5zaCs7" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         25 Ocak 2021 - NVIDIA DLI: Derin Öğrenmenin Temelleri Kursu
       </a>  
+      <a href="https://youtu.be/rTyHsTD2Kcg" type="button" class="btn btn-primary btn-lg btn-block">
+        18 Ocak 2021 - Yapay Zeka Sağlığı Dönüştürebilir mi?
+      </a> 
       <a href="https://shbitt.github.io/kilavuzlar/python3_egitim_materyalleri_giris.pdf" type="button" class="btn btn-primary btn-lg btn-block">Python Kılavuzu</a>
       <a href="https://youtu.be/pwnFenUKZrY" type="button" class="btn btn-primary btn-lg btn-block">
         
