--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
       
       <!-- Modal Yazısı -->
       <div class="modal-body">
-        KSBÜ SHBİTT olarak 23 Ocak Cumartesi günü saat 10.30’da “Robotik Cerrahi ve Floresans Görünütüleme” temalı bir etkinlik yapacağız. KİYPO Yüksek Teknolojili Sağlık Sistemleri A.Ş. Kurucusu Ve Cordamed Biomedikal Mühendislik AŞ CEO’su Volkan UYANIK ve aynı şirketin Klinik Şefi Serkan YILMAZ konuğumuz olacak. KİYPO, floresans görüntüleme teknolojisinde önemli bir yere sahip olan Stryker Novadaq’ın distribütörlüğünü yapmakta ve yerli,yabancı firmalara gönüllü danışmanlıklar yaparak destek olmaktadır. 
-Cordamed da Vinci Robotik Cerrahi Sistemlerinin distribütörlüğünü yapmaktadır YouTube üzerinden gerçekleşecek etkinliğimize aşağıdaki bağlantıdan katılım gösterebilirsiniz.
+        KSBÜ SHBİTT olarak 23 Ocak Cumartesi günü saat 10.30’da “Robotik Cerrahi ve Floresans Görünütüleme” temalı bir etkinlik yapacağız. KİYPO Yüksek Teknolojili Sağlık Sistemleri A.Ş. Kurucusu Ve Cordamed Biomedikal Mühendislik AŞ CEO’su Volkan UYANIK ve aynı şirketin Klinik Satış Müdürü Serkan YILMAZ konuğumuz olacak. KİYPO, floresans görüntüleme teknolojisinde önemli bir yere sahip olan Stryker Novadaq’ın distribütörlüğünü yapmakta ve yerli,yabancı firmalara gönüllü danışmanlıklar yaparak destek olmaktadır. 
+Cordamed, da Vinci Robotik Cerrahi Sistemlerinin distribütörlüğünü yapmaktadır.
       </div>
       
       <!-- Modal Alt Kısım -->
