--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <span class="sr-only">yanıp sönen şey...</span>
           </div>
            </div>           
-              <p1>18 Ocak 2021 - Yapay Zeka Sağlığı Dönüştürebilir mi?</p1> &ensp; <a href="https://www.youtube.com/watch?v=u0d-Vs9Et4o&feature=youtu.be" target="_blank" >🔗YouTube</a> &ensp;&ensp;
+              <p1>23 Ocak 2021 - Floresans Görüntüleme ve Robotik Cerrahi</p1> &ensp; <a href="https://www.youtube.com/watch?v=u0d-Vs9Et4o&feature=youtu.be" target="_blank" >🔗YouTube</a> &ensp;&ensp;
               <li><a href="#" data-toggle="modal" data-target="#ozgecmis_kiypo">Etkinlik Hakkında</a></li>&ensp;&ensp; 
                                                               
         </div>
