ekleme > Yurtdışı Uygulamalarıyla Klinik Farmakoloji

--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,6 +20,11 @@
     </div>
 
     <div class="row">
+      <a href="https://youtu.be/xyfZIBkteco" type="button" class="btn btn-primary btn-lg btn-block">
+        <span class="spinner-grow spinner-grow-sm"></span>
+        3 Şubat 2021 - Klinik Uygulamalarıyla Robotik Cerrahi
+      </a> 
+
       <a href="https://www.youtube.com/watch?v=u0d-Vs9Et4o&feature=youtu.be" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         23 Ocak 2021 - Floresans Görüntüleme ve Robotik Cerrahi
