--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <span class="sr-only">yanıp sönen şey...</span>
           </div>
            </div>           
-              <p1>3 Şubat 2021 - Klinik Uygulamalarıyla Robotik Cerrahi</p1> &ensp; <a href="https://youtu.be/xyfZIBkteco" target="_blank" >🔗YouTube</a> &ensp;&ensp;
+              <p1>3 Şubat 2021 - Klinik Uygulamalarıyla Robotik Cerrahi</p1> &ensp; <a href="https://youtu.be/xyfZIBkteco" target="_blank" >🔗YouTube</a>
                                                                             
         </div>
            
@@ -114,6 +114,13 @@
                   <p1>14 Aralık 2020 - Sağlıkta Yeni Ürün & Servis Tasarımı</p1> &ensp; <a href="https://www.youtube.com/watch?v=SY5CGg2VB3M" target="_blank" >🔗YouTube</a> &ensp;&ensp;
                   <li><a href="#" data-toggle="modal" data-target="#ozgecmis_serkanturkeli">Serkan TÜRKELİ</a></li>                                         
             </div>     
+
+            <div class="d-flex flex-row" style="margin: 3px;">          
+              <div class="p-0">
+          </div>           
+                   <p1>20 Kasım 2020 - Hesaplamalı Cerrahi</p1> &ensp; <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" target="_blank" >🔗YouTube</a>                                      
+         </div>   
+
       </div>
 
 <!-- Özgeçmiş Modalleri -->
