--- a/linkler/index.html
+++ b/linkler/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="row">
-      <a href="https://youtu.be/xyfZIBkteco" type="button" class="btn btn-primary btn-lg btn-block">
+      <a href="https://youtu.be/frwh1j8GAuQ" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         7 Şubat 2021 - İmmünoloji, Kanser ve Akademi
       </a> 
