--- a/linkler/index.html
+++ b/linkler/index.html
@@ -28,23 +28,7 @@
       <a href="https://youtu.be/xyfZIBkteco" type="button" class="btn btn-primary btn-lg btn-block">
        3 Şubat 2021 - Klinik Uygulamalarıyla Robotik Cerrahi
       </a> 
-
-      <a href="https://www.youtube.com/watch?v=u0d-Vs9Et4o&feature=youtu.be" type="button" class="btn btn-primary btn-lg btn-block">
-        23 Ocak 2021 - Floresans Görüntüleme ve Robotik Cerrahi
-      </a> 
-      
-      <a href="https://youtu.be/rTyHsTD2Kcg" type="button" class="btn btn-primary btn-lg btn-block">
-        18 Ocak 2021 - Yapay Zeka Sağlığı Dönüştürebilir mi?
-      </a> 
-      <a href="https://shbitt.github.io/kilavuzlar/python3_egitim_materyalleri_giris.pdf" type="button" class="btn btn-primary btn-lg btn-block">Python Kılavuzu</a>
-      <a href="https://youtu.be/pwnFenUKZrY" type="button" class="btn btn-primary btn-lg btn-block">
-        Sayısal Sağlık Weinar Videosu
-      </a>            
-      <a href="https://youtu.be/1GE3MJU2bdA" type="button" class="btn btn-primary btn-lg btn-block">
-        Sağlıkta Veri Bilimi ve Yapay Zeka Weinar Videosu
-      </a>
-      <a href="https://www.youtube.com/watch?v=SY5CGg2VB3M" type="button" class="btn btn-primary btn-lg btn-block">Sağlıkta Yeni Ürün & Servis Tasarımı Webinar Videosu</a>
-      <a href="https://www.youtube.com/watch?v=_9Eta6klfGE" type="button" class="btn btn-primary btn-lg btn-block">Hesaplamalı Cerrahi Webinar Videosu</a>      
+      <a href="https://discord.gg/N6caV57dDH" type="button" class="btn btn-primary btn-lg btn-block">Discord Sunucumuz</a>
       <a href="https://shbitt.github.io/" type="button" class="btn btn-secondary btn-lg btn-block">Ana Sayfa</a>
       <a href="https://www.instagram.com/ksbu_shbitt/" type="button" class="btn btn-secondary btn-lg btn-block">Instagram</a>
       <a href="https://www.linkedin.com/company/shbitt" type="button" class="btn btn-secondary btn-lg btn-block">LinkedIn</a>
