--- a/linkler/index.html
+++ b/linkler/index.html
@@ -19,7 +19,10 @@
 
     </div>
 
+
     <div class="row">
+      <a href="https://www.springer.com/gp/book/9783030699772" type="button" class="btn btn-primary btn-lg btn-block">Artificial Intelligence for a Better Future</a>
+
       <a href="https://youtu.be/6lwWHUH07rQ" type="button" class="btn btn-primary btn-lg btn-block">
         <span class="spinner-grow spinner-grow-sm"></span>
         22 Mayıs 2021 - Tasarımdan Uygulamaya Sağlıkta Yeni Teknolojiler
